Plots of CO2 Emission calculation

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -25,9 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
-    "program = \"prepilot\""
+    "year = None\n",
+    "month = None\n",
+    "program = None"
    ]
   },
   {
@@ -163,16 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "changed-aquarium",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert len(expanded_ct[(expanded_ct['Mode_confirm'] == 'Pilot ebike') & (expanded_ct[\"Replaced_mode\"] == \"Pilot ebike\")]) == 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "every-stanley",
    "metadata": {},
    "outputs": [],
@@ -226,10 +216,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
+    "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True)[:10].keys().tolist()\n",
+    "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True)[:10].tolist()\n",
     "plot_title=\"Number of trips for each purpose for eBike only\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
+    "file_name= 'ntrips_ebike_purpose_%s.png' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
    ]
   },
@@ -240,10 +230,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
+    "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True)[:7].keys().tolist()\n",
+    "values_eb = data_eb.Replaced_mode.value_counts(dropna=True)[:7].tolist()\n",
     "plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
+    "file_name ='ntrips_ebike_replaced_mode_%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)"
    ]
   },
@@ -275,9 +265,11 @@
     "    labels_m.append(x)\n",
     "    values_m.append(y)\n",
     "\n",
+    "labels = labels_m[:7]\n",
+    "values = values_m[:7]\n",
     "plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text\n",
-    "file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "file_name ='miles_ebike_replaced_mode_%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels,values,file_name)\n",
     "print(dg)"
    ]
   },
@@ -296,13 +288,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "data = dg.sort_values(by=['Average (miles)'], ascending=False)\n",
     "x='Replaced_mode'\n",
     "y='Average (miles)'\n",
     "y2 = \"Count\"\n",
     "\n",
-    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
-    "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
+    "plot_title=\" Average Miles for each replaced mode (selected by users)\\n%s\" % quality_text\n",
+    "file_name ='average_miles_replaced_mode_%s.png' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)"
    ]
@@ -339,47 +331,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
-    "\n",
-    "barplot_day(data,x,y,plot_title,file_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "pediatric-cowboy",
-   "metadata": {},
-   "source": [
-    "# Number of Trips by day of week¶"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "metropolitan-musical",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
-    "fq_weekdays = fq_weekdays.reset_index()\n",
-    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
-    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
-    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
-    "fq_weekdays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "scientific-underground",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = fq_weekdays\n",
-    "x = 'Weekday'\n",
-    "y = 'Number of Trips'\n",
-    "\n",
-    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
+    "file_name ='number_of_ebike_trips_per_day_%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
