--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -25,9 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
-    "program = \"prepilot\""
+    "year = None\n",
+    "month = None\n",
+    "program = None"
    ]
   },
   {
@@ -119,16 +119,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entitled-assets",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded_ct.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "renewable-federal",
    "metadata": {},
    "outputs": [],
@@ -207,27 +197,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
-    "values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()\n",
+    "labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True)[:9].keys().tolist()\n",
+    "values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True)[:9].tolist()\n",
     "plot_title= \"Number of trips for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_mode_confirm%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "print(expanded_ct['Mode_confirm'].value_counts(dropna=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "about-seafood",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
-    "values_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "plot_title= \"Number of commute trips for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_commute_mode_confirm%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))"
+    "file_name= 'ntrips_mode_confirm_%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)"
    ]
   },
   {
@@ -245,10 +219,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()\n",
-    "values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True).tolist()\n",
+    "labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True)[:10].keys().tolist()\n",
+    "values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True)[:10].tolist()\n",
     "plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
+    "file_name= 'ntrips_replaced_mode_%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_rm,values_rm,file_name)"
    ]
   },
@@ -286,12 +260,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
+    "labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True)[:10].keys().tolist()\n",
+    "values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True)[:10].tolist()\n",
     "plot_title=\"Number of trips for each purposes (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_purpose%s.png' % file_suffix\n",
-    "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "print(expanded_ct['Trip_purpose'].value_counts(dropna=True))"
+    "file_name= 'ntrips_purpose_%s.png' % file_suffix\n",
+    "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
    ]
   },
   {
@@ -309,12 +282,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
-    "values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
+    "labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True)[:10].keys().tolist()\n",
+    "values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True)[:10].tolist()\n",
     "plot_title=\"Mode confirmations for trips under 10 Miles\\n%s\" % quality_text\n",
     "file_name ='ntrips_under10miles_mode_confirm%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
-    "print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))"
+    "pie_chart_mode(plot_title,labels_d10,values_d10,file_name)"
    ]
   },
   {
@@ -347,9 +319,11 @@
     "    labels_m.append(x)\n",
     "    values_m.append(y)\n",
     "\n",
+    "labels_miles = labels_m[:5]\n",
+    "values_miles = values_m[:5]\n",
     "plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name ='miles_mode_confirm%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "file_name ='miles_mode_confirm_%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels_miles,values_miles,file_name)\n",
     "print(miles)"
    ]
   },
@@ -368,12 +342,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "data = miles.sort_values(by=['Average (miles)'], ascending=False)\n",
     "x='Mode_confirm'\n",
     "y='Average (miles)'\n",
     "\n",
-    "plot_title=\" Average Miles for each mode with > 3 entries\\n%s\" % quality_text\n",
-    "file_name ='average_miles_mode_confirm%s.png' % file_suffix\n",
+    "plot_title=\" Average Miles for each mode (selected by users)\\n%s\" % quality_text\n",
+    "file_name ='average_miles_mode_confirm_%s.png' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)"
    ]
@@ -429,51 +403,20 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of trips by day\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_day%s.png' % file_suffix\n",
+    "file_name ='number_of_trips_by_day_%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "challenging-julian",
-   "metadata": {},
-   "source": [
-    "# Number of Trips by day of week¶"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hollywood-optimization",
+   "id": "imperial-genesis",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fq_weekdays = expanded_ct.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
-    "fq_weekdays = fq_weekdays.reset_index()\n",
-    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
-    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
-    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
-    "fq_weekdays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fallen-gender",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = fq_weekdays\n",
-    "x = 'Weekday'\n",
-    "y = 'Number of Trips'\n",
-    "\n",
-    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
-    "\n",
-    "barplot_day(data,x,y,plot_title,file_name)"
-   ]
-  },
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
