--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -25,9 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
-    "program = \"prepilot\""
+    "year = None\n",
+    "month = None\n",
+    "program = None"
    ]
   },
   {
@@ -194,7 +194,7 @@
     "y='distance_miles'\n",
     "legend ='Mode_confirm'\n",
     "plot_title=\"Sketch of Energy Impact (kWH) by Travel Mode Selected\\n%s\" % quality_text\n",
-    "file_name ='sketch_distance_energy_impact%s.png' % file_suffix\n",
+    "file_name ='sketch_distance_energy_impact_%s.png' % file_suffix\n",
     "distancevsenergy(data,x,y,legend,plot_title,file_name)"
    ]
   },
@@ -241,16 +241,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vocal-canadian",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "japanese-norwegian",
    "metadata": {
     "scrolled": false
@@ -262,7 +252,7 @@
     "y= 'Transport Mode'\n",
     "color = 'selection'\n",
     "plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
-    "file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
+    "file_name ='sketch_all_energy_impact_%s.png' % file_suffix\n",
     "overeall_energy_impact(x,y,color,df,plot_title,file_name)"
    ]
   },
@@ -288,7 +278,7 @@
     "color =eirc['boolean']\n",
     "\n",
     "plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
-    "file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
+    "file_name ='sketch_all_mode_energy_impact_%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)"
    ]
   },
@@ -323,7 +313,7 @@
     "color =ebei['boolean']\n",
     "\n",
     "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text)\n",
-    "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
+    "file_name ='sketch_energy_impact_ebike_%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)"
    ]
   },
@@ -332,77 +322,58 @@
    "id": "black-aruba",
    "metadata": {},
    "source": [
-    "# CO2 Emmissions Calculation"
+    "# CO2 Emissions Calculation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expressed-mother",
+   "id": "authorized-dream",
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct.Mode_confirm.unique()"
+    "expanded_ct = scaffolding.CO2_emssions(expanded_ct)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "desperate-application",
+   "id": "complex-certification",
    "metadata": {},
    "source": [
-    "(df[\"distance_miles\"]/23.2)*19.60\n",
-    "miles*mpg = gal* lb CO2/gal\n",
+    "# Sketch of Total CO2 Emissions by Replaced_mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caroline-singapore",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_impact': ['sum', 'mean']},)\n",
+    "co2rp.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "co2rp = co2rp.reset_index()\n",
+    "co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "co2rp['boolean'] = co2rp['total_lb_CO2_emissions'] > 0\n",
     "\n",
-    "ebike\n",
-    "kWH/passenger mile *0.001 (MWH/kWH)* lb CO2/MWH\n",
-    "\n"
+    "\n",
+    "net_CO2_saved = round(sum(co2rp['total_lb_CO2_emissions']), 2)\n",
+    "\n",
+    "x = co2rp['total_lb_CO2_emissions']\n",
+    "y = co2rp['Replaced_mode']\n",
+    "color =co2rp['boolean']\n",
+    "\n",
+    "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
+    "file_name ='sketch_all_mode_CO2impact_%s.png' % file_suffix\n",
+    "CO2_impact(x,y,color,plot_title,file_name)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "careful-structure",
+   "cell_type": "markdown",
+   "id": "generous-munich",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def CO2_emmsions(df):\n",
-    "    if (df[\"Mode_confirm\"] == 'Car, drove alone'):\n",
-    "        return  ((df[\"distance_miles\"]*4374)*0.000001)*157.2 \n",
-    "    elif (df[\"Mode_confirm\"] ==  'Car, with others'):\n",
-    "        return  ((df[\"distance_miles\"]*2840)*0.000001)*157.2 \n",
-    "    elif (df[\"Mode_confirm\"] == 'Taxi/Uber/Lyft'):\n",
-    "        return  ((df[\"distance_miles\"]*7214)*0.000001)*157.2 \n",
-    "    elif df[\"Mode_confirm\"] ==  'Bus':\n",
-    "        return ((df[\"distance_miles\"]*4560)*0.000001)*163.1\n",
-    "    elif df[\"Mode_confirm\"] ==  'Train':\n",
-    "        return (df[\"distance_miles\"]*0.37*0.001*1166)\n",
-    "    elif df[\"Mode_confirm\"] ==  'Pilot ebike'or (df[\"Mode_confirm\"] == 'Bikeshare'):\n",
-    "        return (df[\"distance_miles\"]*0.022*0.001*1166)\n",
-    "    elif df[\"Mode_confirm\"] == 'Scooter share' :\n",
-    "        return (df[\"distance_miles\"]*0.027*0.001*1166)\n",
-    "  \n",
-    "    else:\n",
-    "        return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "protective-personal",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded_ct['lbCO2'] = expanded_ct.apply(CO2_emmsions, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "collect-demographic",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded_ct[[\"distance_miles\",'Mode_confirm', 'lbCO2']]"
+    "## Sketch of  CO2 Emissions Impact by E-bike trips"
    ]
   },
   {
@@ -412,31 +383,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = expanded_ct\n",
-    "x = 'lbCO2'\n",
-    "y = 'Mode_confirm'\n",
+    "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
+    "# ebei : ebike energy impact\n",
+    "ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_impact': ['sum', 'mean']},)\n",
+    "ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "ebco2 = ebco2.reset_index()\n",
+    "ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
+    "net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
     "\n",
+    "x = ebco2['total_lb_CO2_emissions']\n",
+    "y = ebco2['Replaced_mode']\n",
+    "color = ebco2['boolean']\n",
     "\n",
-    "plot_title=\"Pounds of CO2 Emmisions by mode selected by users\"\n",
-    "file_name ='CO2%s.png' % file_suffix\n",
-    "barplot_mode(data,x,y,plot_title,file_name)"
+    "plot_title=\"Sketch of Total Pounds of CO2 Emmisions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text)\n",
+    "file_name ='sketch_energy_impact_ebike_%s.png' % file_suffix\n",
+    "CO2_impact(x,y,color,plot_title,file_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "hearing-occupation",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "employed-system",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
