Over the weekend changes reverted.

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "worldwide-portuguese",
    "metadata": {},
    "source": [
     "## Generate static graphs"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alive-integration",
    "metadata": {},
    "source": [
     "These are the input parameters for the notebook. They will be automatically changed when the scripts to generate monthly statistics are run. You can modify them manually to generate multiple plots locally as well.\n",
@@ -21,19 +19,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "former-luther",
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
-    "program = None"
+    "year = 2020\n",
+    "month = 11\n",
+    "program = \"prepilot\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dated-compromise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "certain-cookie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +57,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pacific-voice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "derived-scale",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "critical-balance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "violent-theta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "toxic-running",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lovely-somerset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hairy-alcohol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collected-restriction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +140,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coral-bicycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "every-stanley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "empty-intensity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +167,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demanding-picking",
    "metadata": {},
    "source": [
     "# Ebike Data Only"
@@ -192,7 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "romance-green",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +184,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seeing-court",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,34 +193,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-breach",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True)[:10].keys().tolist()\n",
-    "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True)[:10].tolist()\n",
+    "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "plot_title=\"Number of trips for each purpose for eBike only\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_ebike_purpose_%s.png' % file_suffix\n",
+    "file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thermal-midnight",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True)[:7].keys().tolist()\n",
-    "values_eb = data_eb.Replaced_mode.value_counts(dropna=True)[:7].tolist()\n",
+    "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_replaced_mode_%s.png' % file_suffix\n",
+    "file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dependent-reservoir",
    "metadata": {},
    "source": [
     "# Miles replaced_mode by E-bike data only "
@@ -248,7 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pointed-velvet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,17 +242,14 @@
     "    labels_m.append(x)\n",
     "    values_m.append(y)\n",
     "\n",
-    "labels = labels_m[:7]\n",
-    "values = values_m[:7]\n",
     "plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text\n",
-    "file_name ='miles_ebike_replaced_mode_%s.png' % file_suffix\n",
-    "pie_chart_mode(plot_title,labels,values,file_name)\n",
+    "file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
     "print(dg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "honest-dylan",
    "metadata": {},
    "source": [
     "# Average Miles per ebike trip"
@@ -284,24 +258,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "growing-portsmouth",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dg.sort_values(by=['Average (miles)'], ascending=False)\n",
+    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
     "x='Replaced_mode'\n",
     "y='Average (miles)'\n",
     "y2 = \"Count\"\n",
     "\n",
-    "plot_title=\" Average Miles for each replaced mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name ='average_miles_replaced_mode_%s.png' % file_suffix\n",
+    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
+    "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "committed-favorite",
    "metadata": {},
    "source": [
     "# Number of Trips by Day"
@@ -310,7 +282,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patent-performance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +293,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limiting-handling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +301,44 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
-    "file_name ='number_of_ebike_trips_per_day_%s.png' % file_suffix\n",
+    "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
+    "\n",
+    "barplot_day(data,x,y,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Number of Trips by day of week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "fq_weekdays = fq_weekdays.reset_index()\n",
+    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
+    "fq_weekdays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fq_weekdays\n",
+    "x = 'Weekday'\n",
+    "y = 'Number of Trips'\n",
+    "\n",
+    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
+    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
@@ -353,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
