--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -22,9 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
-    "program = None"
+    "year = 2020\n",
+    "month = 11\n",
+    "program = \"prepilot\""
    ]
   },
   {
@@ -177,7 +177,7 @@
     "y='distance_miles'\n",
     "legend ='Mode_confirm'\n",
     "plot_title=\"Sketch of Energy Impact (kWH) by Travel Mode Selected\\n%s\" % quality_text\n",
-    "file_name ='sketch_distance_energy_impact_%s.png' % file_suffix\n",
+    "file_name ='sketch_distance_energy_impact%s.png' % file_suffix\n",
     "distancevsenergy(data,x,y,legend,plot_title,file_name)"
    ]
   },
@@ -232,7 +232,7 @@
     "y= 'Transport Mode'\n",
     "color = 'selection'\n",
     "plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
-    "file_name ='sketch_all_energy_impact_%s.png' % file_suffix\n",
+    "file_name ='sketch_all_energy_impact%s.png' % file_suffix\n",
     "overeall_energy_impact(x,y,color,df,plot_title,file_name)"
    ]
   },
@@ -256,7 +256,7 @@
     "color =eirc['boolean']\n",
     "\n",
     "plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
-    "file_name ='sketch_all_mode_energy_impact_%s.png' % file_suffix\n",
+    "file_name ='sketch_all_mode_energy_impact%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)"
    ]
   },
@@ -289,7 +289,7 @@
     "color =ebei['boolean']\n",
     "\n",
     "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text)\n",
-    "file_name ='sketch_energy_impact_ebike_%s.png' % file_suffix\n",
+    "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)"
    ]
   },
@@ -336,7 +336,7 @@
     "color =co2rp['boolean']\n",
     "\n",
     "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
-    "file_name ='sketch_all_mode_CO2impact_%s.png' % file_suffix\n",
+    "file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)"
    ]
   },
@@ -367,7 +367,7 @@
     "color = ebco2['boolean']\n",
     "\n",
     "plot_title=\"Sketch of Total Pounds of CO2 Emmisions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text)\n",
-    "file_name ='sketch_energy_impact_ebike_%s.png' % file_suffix\n",
+    "file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)"
    ]
   }
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
