Clean up CO2 Emission Function

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -306,7 +306,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct = scaffolding.CO2_emssions(expanded_ct)"
+    "expanded_ct = scaffolding.CO2_emissions(expanded_ct,'Replaced_mode', 'distance_miles')\n",
+    "expanded_ct = scaffolding.CO2_emissions(expanded_ct,'Mode_confirm', 'distance_miles')\n",
+    "expanded_ct['CO2_impact'] = expanded_ct['Replaced_mode_CO2'] - expanded_ct['Mode_confirm_CO2']"
    ]
   },
   {
