Added the assertion line to check than Pilot ebike in mode_confirm and replaced_mode  was zero after data quality check.

--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -152,6 +152,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "assert len(expanded_ct[(expanded_ct['Mode_confirm'] == 'Pilot ebike') & (expanded_ct[\"Replaced_mode\"] == \"Pilot ebike\")]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Energy Impact Calculation\n",
     "expanded_ct = scaffolding.energy_cal(expanded_ct,dic_ei)"
    ]
@@ -398,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
