Add a graph for emission calculations
- Add a new function (`CO2_emissions`) to scaffolding to calculate the CO2 emissions
- Add a new function (`CO2_impact`) to plots to plot it
- Enhance the energy calculation notebook to calculate the emissions and plot it

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -326,6 +326,100 @@
     "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "injured-thanks",
+   "metadata": {},
+   "source": [
+    "# CO2 Emissions Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "clean-child",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct = scaffolding.CO2_emissions(expanded_ct,'Replaced_mode', 'distance_miles')\n",
+    "expanded_ct = scaffolding.CO2_emissions(expanded_ct,'Mode_confirm', 'distance_miles')\n",
+    "expanded_ct['CO2_impact'] = expanded_ct['Replaced_mode_CO2'] - expanded_ct['Mode_confirm_CO2']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bound-comparison",
+   "metadata": {},
+   "source": [
+    "# Sketch of Total CO2 Emissions by Replaced_mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "massive-virtue",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_impact': ['sum', 'mean']},)\n",
+    "co2rp.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "co2rp = co2rp.reset_index()\n",
+    "co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "co2rp['boolean'] = co2rp['total_lb_CO2_emissions'] > 0\n",
+    "\n",
+    "\n",
+    "net_CO2_saved = round(sum(co2rp['total_lb_CO2_emissions']), 2)\n",
+    "\n",
+    "x = co2rp['total_lb_CO2_emissions']\n",
+    "y = co2rp['Replaced_mode']\n",
+    "color =co2rp['boolean']\n",
+    "\n",
+    "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
+    "file_name ='sketch_all_mode_CO2impact%s.png' % file_suffix\n",
+    "CO2_impact(x,y,color,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "experienced-expense",
+   "metadata": {},
+   "source": [
+    "## Sketch of  CO2 Emissions Impact by E-bike trips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "weekly-likelihood",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
+    "\n",
+    "ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_impact': ['sum', 'mean']},)\n",
+    "ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "ebco2 = ebco2.reset_index()\n",
+    "ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
+    "ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
+    "net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
+    "\n",
+    "x = ebco2['total_lb_CO2_emissions']\n",
+    "y = ebco2['Replaced_mode']\n",
+    "color = ebco2['boolean']\n",
+    "\n",
+    "plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text)\n",
+    "file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
+    "CO2_impact(x,y,color,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "found-builder",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
