--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "future-boating",
    "metadata": {},
    "source": [
     "## Generate static graphs"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adopted-muscle",
    "metadata": {},
    "source": [
     "These are the input parameters for the notebook. They will be automatically changed when the scripts to generate monthly statistics are run. You can modify them manually to generate multiple plots locally as well.\n",
@@ -21,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bigger-magnet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-spanking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "criminal-parker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +57,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neutral-hudson",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading mapping dictionaries from mapping_dictionaries notebook\n",
-    "%store -r dic_ei\n",
+    "\n",
+    "%store -r df_EI\n",
     "%store -r dic_re\n",
     "%store -r dic_pur\n",
+    "%store -r dic_fuel\n",
     "\n",
     "# convert a dictionary to a defaultdict\n",
     "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
@@ -79,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corrected-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "congressional-history",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesser-madrid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excess-butterfly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sustainable-judge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +120,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "english-atlanta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,31 +130,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "involved-image",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Mapping new labels with dictionaries\n",
     "expanded_ct['Trip_purpose']= expanded_ct['purpose_confirm'].map(dic_pur)\n",
     "expanded_ct['Mode_confirm']= expanded_ct['mode_confirm'].map(dic_re)\n",
-    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].map(dic_re)"
+    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].map(dic_re)\n",
+    "\n",
+    "#Mapping fuel\n",
+    "expanded_ct['Mode_confirm_fuel']= expanded_ct['Mode_confirm'].map(dic_fuel)\n",
+    "expanded_ct['Replaced_mode_fuel']= expanded_ct['Replaced_mode'].map(dic_fuel)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compressed-syndicate",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Energy Impact Calculation\n",
-    "expanded_ct = scaffolding.energy_cal(expanded_ct,dic_ei)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "prompt-manufacturer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +155,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "immune-hollow",
+   "metadata": {},
+   "source": [
+    "# Energy Impact (kWH) Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct = scaffolding.energy_intensity(expanded_ct, df_EI, 'distance','Replaced_mode', 'Mode_confirm')\n",
+    "expanded_ct = scaffolding.energy_impact_kWH(expanded_ct, 'distance_miles','Replaced_mode', 'Mode_confirm')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Distance vs. Energy_Impact (kWH) by Mode_confirm"
@@ -183,7 +180,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "activated-score",
    "metadata": {
     "scrolled": false
    },
@@ -200,7 +196,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorporate-easter",
    "metadata": {},
    "source": [
     "# Energy_Impact (kWH)"
@@ -209,7 +204,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "funny-flour",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +235,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vocal-canadian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "japanese-norwegian",
    "metadata": {
     "scrolled": false
    },
@@ -268,7 +260,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "disciplinary-monitoring",
    "metadata": {},
    "source": [
     "# Sketch of Total Energy_Impact (kWH) by Replaced_mode"
@@ -277,7 +268,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "educated-insert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binding-oracle",
    "metadata": {},
    "source": [
     "# Sketch of Energy Impact by E-bike trips"
@@ -303,7 +292,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "creative-driver",
    "metadata": {
     "scrolled": false
    },
@@ -329,27 +317,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "injured-thanks",
    "metadata": {},
    "source": [
-    "# CO2 Emissions Calculation"
+    "# CO2 Emissions (lb) Calculation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clean-child",
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct = scaffolding.CO2_emissions(expanded_ct,'Replaced_mode', 'distance_miles')\n",
-    "expanded_ct = scaffolding.CO2_emissions(expanded_ct,'Mode_confirm', 'distance_miles')\n",
-    "expanded_ct['CO2_impact'] = expanded_ct['Replaced_mode_CO2'] - expanded_ct['Mode_confirm_CO2']"
+    "expanded_ct = scaffolding.CO2_impact_lb(expanded_ct,'distance_miles','Replaced_mode', 'Mode_confirm')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bound-comparison",
    "metadata": {},
    "source": [
     "# Sketch of Total CO2 Emissions by Replaced_mode"
@@ -358,11 +341,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "massive-virtue",
    "metadata": {},
    "outputs": [],
    "source": [
-    "co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_impact': ['sum', 'mean']},)\n",
+    "co2rp=expanded_ct.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
     "co2rp.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
     "co2rp = co2rp.reset_index()\n",
     "co2rp= co2rp.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
@@ -382,22 +364,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-expense",
    "metadata": {},
    "source": [
-    "## Sketch of  CO2 Emissions Impact by E-bike trips"
+    "# Sketch of  CO2 Emissions Impact by E-bike trips"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weekly-likelihood",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_eb = expanded_ct.query(\"Mode_confirm == 'Pilot ebike'\")\n",
     "\n",
-    "ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_impact': ['sum', 'mean']},)\n",
+    "ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
     "ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
     "ebco2 = ebco2.reset_index()\n",
     "ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
@@ -412,14 +392,6 @@
     "file_name ='sketch_CO2impact_ebike%s.png' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "found-builder",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -438,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
