--- a/viz_scripts/mapping_dictionaries.ipynb
+++ b/viz_scripts/mapping_dictionaries.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "manual-welding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,73 +12,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "improved-tribute",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_pur= pd.read_csv(r'auxiliary_files/purpose_labels.csv')\n",
     "df_re = pd.read_csv(r'auxiliary_files/mode_labels.csv')\n",
-    "df_ei = pd.read_csv(r'auxiliary_files/energy_intensity.csv')\n",
+    "df_EI = pd.read_csv(r'auxiliary_files/energy_intensity_updated.csv')\n",
     "\n",
     "#dictionaries:\n",
-    "dic_pur = dict(zip(df_pur.purpose_confirm,df_pur.bin_purpose)) # bin purpose\n",
-    "dic_re  = dict(zip(df_re.replaced_mode,df_re.mode_clean)) # bin modes\n",
-    "dic_ei  = dict(zip(df_ei.replaced_mode,df_ei.EI)) # EI values"
+    "dic_pur = dict(zip(df_pur['purpose_confirm'],df_pur['bin_purpose'])) # bin purpose\n",
+    "dic_re  = dict(zip(df_re['replaced_mode'],df_re['mode_clean'])) # bin modes\n",
+    "dic_fuel = dict(zip(df_EI['mode'],df_EI['fuel']))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fatal-major",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "failing-concrete",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cleaning the trip purpose attribute\n",
-    "dic_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "necessary-inflation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Energy Intensity Values as per reference:\n",
-    "dic_ei"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "respected-saturday",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Binning of the replaced_mode and mode_confirm\n",
-    "dic_re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "informed-asthma",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%store dic_ei \n",
+    "%store df_EI \n",
     "%store dic_re \n",
-    "%store dic_pur "
+    "%store dic_pur \n",
+    "%store dic_fuel "
    ]
   }
  ],
@@ -99,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
