Multiple fixex to the analysis scripts
- remove the references to the obsolete `energy_cal` function from the ebike
  and generic metrics notebooks
- move the `distance_miles` calculation from the `energy_intensity` function to
  a separate function called `unit_conversions` since we need it in all notebooks
- fix the formatting of the `generic_metrics_ebike_project`, was probably
  broken in some earlier merge.

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -178,7 +178,7 @@
    "outputs": [],
    "source": [
     "# Energy Impact Calculation\n",
-    "expanded_ct = scaffolding.energy_cal(expanded_ct,dic_ei)"
+    "scaffolding.unit_conversions(expanded_ct)"
    ]
   },
   {
