--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -173,12 +173,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "every-zimbabwe",
+   "id": "advanced-newfoundland",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Energy Impact Calculation\n",
-    "expanded_ct = scaffolding.energy_cal(expanded_ct,dic_ei)"
+    "scaffolding.unit_conversions(expanded_ct)"
    ]
   },
   {
@@ -473,7 +472,8 @@
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
-  },
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
