--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -292,6 +292,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "binary-program",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "x='Replaced_mode'\n",
+    "y='Average (miles)'\n",
+    "y2 = \"Count\"\n",
+    "\n",
+    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
+    "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
+    "\n",
+    "barplot_mode(data,x,y,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "growing-portsmouth",
    "metadata": {},
    "outputs": [],
