cost_time.csv updates
Added cost_time.csv, read in through the mapping_dictionaries.ipynb and added the function call in cost_time_impact_estimates.

--- a/viz_scripts/cost_and_time_impact_estimates.ipynb
+++ b/viz_scripts/cost_and_time_impact_estimates.ipynb
@@ -1327,7 +1327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct = scaffolding.energy_intensity(expanded_ct, df_EI, 'distance','Replaced_mode', 'Mode_confirm')\n",
+    "expanded_ct = scaffolding.cost(expanded_ct, df_EI, 'distance','Replaced_mode', 'Mode_confirm')\n",
     "expanded_ct = scaffolding.energy_impact_kWH(expanded_ct, 'distance_miles','Replaced_mode', 'Mode_confirm')"
    ]
   },
